ggv2/challenges/c-httproute-invalid-gtp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: c-route-invalid-gtp
  namespace: httpbin
spec:
  parentRefs:
    - name: http
      namespace: gloo-gateway-system
  hostnames:
    - "www.example4.com"
  rules:
    - matches:
      - path:
         type: PathPrefix
         value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gloo.solo.io
            kind: GlooTrafficPolicy
            name: gtp-timeout-nx
      backendRefs:
        - name: httpbin
          port: 8000
