ggv2/challenges/c-httproute-regexRewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: c-httpbin-regex-rewrite
  namespace: httpbin
spec:
  parentRefs:
  - name: http
    namespace: gloo-gateway-system
  hostnames:
    - rewrite.example
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /headers
      filters:
        - type: RequestRewrite
          requestRewrite:
            path:
              type: RegularExpression
              pattern: 'headers'
              substitution: 'anything'
      backendRefs:
        - name: httpbin
          port: 8000
